# zmtp24-sysarchtale

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  dpkg-latex-reqirements.txt  dpkg-nodejs-reqirements.txt  dpkg-python3-reqirements.txt  dpkg-spelling-reqirements.txt  dpkg-tools-reqirements.txt  make.bat  nodeenv-reqirements.txt  pyproject.toml  west.yml
.github/workflows/: build.yml  publish.yml  remove.yml
contrib/: abstract-how-i-fell-in-love.txt  all-figures.drawio
source/: .gitignore  CREDITS  acronyms.rst  appendix.rst  bibliography.rst  bibliography.rstr  conf.py  docaudience.rsti  docextlnk.rsti  docinvolcomps.rsti  doclegal.rsti  doclegtxt.rsti  docmeta.rsti  docpreample.rsti  docpreamptxt.rsti  docprereq-cbt.rsti  docprereq-dqa.rsti  docprereq-rcs.rsti  docprereq-scr.rsti  docprereq.rsti  docreplaces.rsti  docroles.rsti  docshow.rsti  docsummary.rsti  docsumtxt.rsti  docterms.rsti  docunicode.rsti  docversions.rsti  docverslog.rsti  gentoctree.rsti.in  glossary.rst  glossary.rstr  index.rst  index.rstr  indexlod.rst  indexloe.rst  indexlof.rst  indexloi.rst  indexlol.rst  indexlot.rst  (+2 more)
source/_images/: static-qr-code-fcb45ac02c0ccb8acac7ff712f1a1183.url
source/_videos/: .gitignore
source/appendix/: credits.rst  license.rst
source/revealjs/: greeting.rsti  materials.rsti  prerequisites.rsti  presenters.rsti  what-for-who.rsti
submanifests/: asciinema-rec_script.yaml  bibtex_bibliography.yaml  colors_solarized.yaml  sphinx_glossary.yaml  sphinx_static.yaml  sphinx_templates.yaml
tools/: .gitignore
(+59 files in other folders)
